# drones_ROS2

./: .gitignore  .gitmodules  README.md
drive_drone/launch/: p1_a_drone_fly_gazebo_rviz.launch copy.py  p1_b_tb3_drone_gazebo.launch.py
drone_basic/: CMakeLists.txt  package.xml
drone_basic/config/: a_drone_visualize.rviz  drone_mapping.rviz  mapping_params.yaml
drone_basic/launch/: b_gazebo_rviz_drone.launch.py  c_tb3_hector_gazebo_spawn.launch.py  d_mapping_gazebo_rviz_drone.launch.py  db_tb3mapping.launch.py
drone_basic/src/: 1_drone_follow.cpp  2_odom_pub.cpp
